Working towards Java 17.
- Removed deprecated API usage
- Improved some streams
- Use new collections factory methods
- Use patterns for instanceof
- Use records where applicable

Refs #158 .